xz1919: WIP debugging refinement